--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdegraphics (2:980419-b4-1) unstable; urgency=low
+
+  * new upstream version Beta4
+
+ -- Stephan Kulow <coolo@kde.org>  Sun, 19 Apr 1998 17:29:21 +0200
+
 kdegraphics (2:980312-3) frozen; urgency=low
 
   * add man page for undocumented
