--- a/po/de/kghostview.po
+++ b/po/de/kghostview.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostview 0.6\n"
-"POT-Creation-Date: 1998-04-09 18:29+0200\n"
-"PO-Revision-Date: 1998-01-24 21:45 +0100\n"
+"POT-Creation-Date: 1998-04-21 14:50+0200\n"
+"PO-Revision-Date: 1998-04-21 21:45 +0100\n"
 "Last-Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
 
 #: copyright.cpp:27
@@ -42,14 +42,12 @@ msgstr ""
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 
 #: goto.cpp:54
-#, fuzzy
 msgid "&Section"
-msgstr "Abschnitt"
+msgstr "&Abschnitt"
 
 #: goto.cpp:70
-#, fuzzy
 msgid "&Page"
-msgstr "Seite"
+msgstr "&Seite"
 
 #: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2215
 #: kghostview.cpp:2227 kghostview.cpp:2232 kghostview.cpp:2515
@@ -58,79 +56,68 @@ msgid "of %d"
 msgstr "von %d"
 
 #: info.cpp:45
-#, fuzzy
 msgid "File name :"
-msgstr "Datei :"
+msgstr "Dateiname :"
 
 #: info.cpp:53
 msgid "Document title :"
-msgstr ""
+msgstr "Dokument-Titel:"
 
 #: info.cpp:61
 msgid "Publication date :"
-msgstr ""
+msgstr "Veröffentlichungsdatum:"
 
 #: interpreter.cpp:42
 msgid "General"
 msgstr "Allgemein"
 
 #: interpreter.cpp:79
-#, fuzzy
 msgid "&Interpreter name"
-msgstr "Interpreter"
+msgstr "&Interpretername"
 
 #: interpreter.cpp:87
-#, fuzzy
 msgid "&Antialiasing"
-msgstr "Kantenglättung"
+msgstr "&Kantenglättung"
 
 #: interpreter.cpp:97
-#, fuzzy
 msgid "Platform &fonts"
 msgstr "Zeichensätze"
 
 #: interpreter.cpp:107
-#, fuzzy
 msgid "&Messages"
-msgstr "Meldungen"
+msgstr "&Meldungen"
 
 #: interpreter.cpp:130
 msgid "Palette"
 msgstr "Palette"
 
 #: interpreter.cpp:152
-#, fuzzy
 msgid "Colo&r"
-msgstr "Farbe"
+msgstr "&Farbe"
 
 #: interpreter.cpp:161
-#, fuzzy
 msgid "&Grayscale"
-msgstr "Graustufen"
+msgstr "&Graustufen"
 
 #: interpreter.cpp:169
-#, fuzzy
 msgid "Monochrom&e"
-msgstr "Schwarz-Weiß"
+msgstr "&Schwarz-Weiß"
 
 #: interpreter.cpp:192
 msgid "Backing"
 msgstr "Backing"
 
 #: interpreter.cpp:214
-#, fuzzy
 msgid "&Pixmap"
-msgstr "Pixmap"
+msgstr "&Pixmap"
 
 #: interpreter.cpp:224
-#, fuzzy
 msgid "&Backing store"
-msgstr "Backing store"
+msgstr "&Backing store"
 
 #: interpreter.cpp:244 kkeydialog.cpp:230
-#, fuzzy
 msgid "&Defaults"
-msgstr "Voreinstellungen"
+msgstr "&Voreinstellungen"
 
 #: interpreter.cpp:314
 msgid "gs"
@@ -138,19 +125,19 @@ msgstr "gs"
 
 #: kaccel.cpp:166
 msgid "CTRL+O"
-msgstr ""
+msgstr "Strg+0"
 
 #: kaccel.cpp:170
 msgid "CTRL+N"
-msgstr ""
+msgstr "Strg+N"
 
 #: kaccel.cpp:174
 msgid "CTRL+W"
-msgstr ""
+msgstr "Strg+W"
 
 #: kaccel.cpp:178
 msgid "CTRL+S"
-msgstr ""
+msgstr "Strg+S"
 
 #: kaccel.cpp:181 kaccel.cpp:401 kghostview.cpp:347 kghostview.cpp:368
 #: kghostview.cpp:432 kghostview.cpp:1286
@@ -159,76 +146,71 @@ msgstr "Drucken"
 
 #: kaccel.cpp:182
 msgid "CTRL+P"
-msgstr ""
+msgstr "Strg+P"
 
 #: kaccel.cpp:186
 msgid "CTRL+Q"
-msgstr ""
+msgstr "Strg+Q"
 
 #: kaccel.cpp:190
 msgid "CTRL+X"
-msgstr ""
+msgstr "Strg+X"
 
 #: kaccel.cpp:194
 msgid "CTRL+C"
-msgstr ""
+msgstr "Strg+C"
 
 #: kaccel.cpp:198
 msgid "CTRL+V"
-msgstr ""
+msgstr "Strg+V"
 
 #: kaccel.cpp:202
 msgid "CTRL+Z"
-msgstr ""
+msgstr "Strg+Z"
 
 #: kaccel.cpp:206
 msgid "CTRL+F"
-msgstr ""
+msgstr "Strg+F"
 
 #: kaccel.cpp:210
 msgid "CTRL+R"
-msgstr ""
+msgstr "Strg+R"
 
 #: kaccel.cpp:213 kaccel.cpp:425
 msgid "Insert"
-msgstr ""
+msgstr "Einfügen"
 
 #: kaccel.cpp:214
 msgid "CTRL+Insert"
-msgstr ""
-
-#: kaccel.cpp:217 kaccel.cpp:428
-msgid "Home"
-msgstr ""
+msgstr "Strg+Einfügen"
 
 #: kaccel.cpp:218
 msgid "CTRL+Home"
-msgstr ""
+msgstr "Strg+Pos1"
 
 #: kaccel.cpp:221 kaccel.cpp:431
 msgid "End"
-msgstr ""
+msgstr "Ende"
 
 #: kaccel.cpp:222
 msgid "CTRL+End"
-msgstr ""
+msgstr "Strg+Ende"
 
 #: kaccel.cpp:225 kaccel.cpp:226 kaccel.cpp:434
 msgid "Prior"
-msgstr ""
+msgstr "Bild hoch"
 
 #: kaccel.cpp:229 kaccel.cpp:230 kaccel.cpp:437
-#, fuzzy
 msgid "Next"
-msgstr "Nächste Seite"
+msgstr "Bild runter"
 
 #: kaccel.cpp:234
 msgid "F1"
-msgstr ""
+msgstr "F1"
 
 #: kghostview.cpp:202
 msgid "Document information"
-msgstr ""
+msgstr "Dokument-Information"
 
 #: kghostview.cpp:216 kghostview.cpp:349 kghostview.cpp:370 kghostview.cpp:439
 msgid "View Control"
@@ -276,7 +258,7 @@ msgstr "Aktualisieren"
 
 #: kghostview.cpp:402 kghostview.cpp:404
 msgid "Not known"
-msgstr ""
+msgstr "Unbekannt"
 
 #: kghostview.cpp:415
 msgid "Configure interpreter"
@@ -288,11 +270,11 @@ msgstr "&Öffnen ..."
 
 #: kghostview.cpp:491
 msgid "Open &recent"
-msgstr ""
+msgstr "Öffne &bisherige"
 
 #: kghostview.cpp:496
 msgid "&Print ..."
-msgstr "&Drucken"
+msgstr "&Drucken..."
 
 #: kghostview.cpp:504
 msgid "Zoom &in"
@@ -307,9 +289,8 @@ msgid "&View control ..."
 msgstr "An&zeige ..."
 
 #: kghostview.cpp:511
-#, fuzzy
 msgid "&Fit to page width"
-msgstr "&Gehe zu Seite"
+msgstr "&Passend auf Seitenbreite"
 
 #: kghostview.cpp:513
 msgid "&Redisplay"
@@ -413,31 +394,27 @@ msgstr "&Seitenmarkierungen"
 
 #: kghostview.cpp:654
 msgid "New window ..."
-msgstr ""
+msgstr "Neues Fenster..."
 
 #: kghostview.cpp:657
-#, fuzzy
 msgid "Open file ..."
-msgstr "&Öffnen ..."
+msgstr "Datei &Öffnen ..."
 
 #: kghostview.cpp:662
-#, fuzzy
 msgid "Print document ..."
-msgstr "Dokument drucken"
+msgstr "Dokument drucken..."
 
 #: kghostview.cpp:667
-#, fuzzy
 msgid "Zoom in"
-msgstr "Ver&größern"
+msgstr "Vergrößern"
 
 #: kghostview.cpp:670
-#, fuzzy
 msgid "Zoom out"
-msgstr "Ver&kleinern"
+msgstr "Verkleinern"
 
 #: kghostview.cpp:673
 msgid "Change view ..."
-msgstr "Ansicht ändern"
+msgstr "Ansicht ändern..."
 
 #: kghostview.cpp:683
 msgid "Go back"
@@ -449,7 +426,7 @@ msgstr "Vorwärts"
 
 #: kghostview.cpp:689
 msgid "Go to page ..."
-msgstr "Zu Seite ..."
+msgstr "Gehe zu Seite..."
 
 #: kghostview.cpp:694
 msgid "Go to start"
@@ -464,9 +441,8 @@ msgid "Read down the page"
 msgstr "Weiter runter"
 
 #: kghostview.cpp:705
-#, fuzzy
 msgid "Toggle this page mark"
-msgstr "Markierungen umschalten"
+msgstr "Diese Markierung ändern"
 
 #: kghostview.cpp:727
 msgid "Sc.100 of 100  P.100 of 100"
@@ -561,7 +537,7 @@ msgstr ""
 
 #: kghostview.cpp:1559 kghostview.cpp:1675
 msgid "Error printing"
-msgstr ""
+msgstr "Fehler beim Drucken"
 
 #: kghostview.cpp:1569
 msgid ""
@@ -570,23 +546,31 @@ msgid ""
 "that currently loaded into the viewer.\n"
 "There is no need to print all pages into a new file."
 msgstr ""
+"Sie möchten alle Seiten in eine Datei drucken.\n"
+"Das würde ein zum gegenwärtig geladenen\n"
+"Dokument identisches Dokument erzeugen.\n"
+"Es gibt keinen Grund alle Seiten in eine neue Datei zu drucken."
 
 #: kghostview.cpp:1582
 msgid ""
 "No file name was given so\n"
 "nothing could be printed to a file.\n"
 msgstr ""
+"Es wurde kein Dateiname angegeben,\n"
+"also konnte nichts in eine Datei gedruckt werden.\n"
 
 #: kghostview.cpp:1640
-#, fuzzy, c-format
+#, c-format
 msgid "Print failure : %s"
-msgstr "Druckerfehler : lpr"
+msgstr "Druckfehler : %s"
 
 #: kghostview.cpp:1676
 msgid ""
 "Printing failed because the list of\n"
 "pages to be printed was empty.\n"
 msgstr ""
+"Druck fehlgeschlagen, da die Liste\n"
+"der zu druckenden Seiten leer war.\n"
 
 #: kghostview.cpp:2209 kghostview.cpp:2221 kghostview.cpp:2486
 #: kghostview.cpp:2509
@@ -624,49 +608,47 @@ msgstr "Sk.%d "
 
 #: kkeydialog.cpp:308
 msgid "Current key"
-msgstr ""
+msgstr "Derzeitige Taste"
 
 #: kkeydialog.cpp:319
-#, fuzzy
 msgid "&Action"
-msgstr "Abschnitt"
+msgstr "&Aktion"
 
 #: kkeydialog.cpp:378
 msgid "&No key"
-msgstr ""
+msgstr "&Keine Taste"
 
 #: kkeydialog.cpp:386
-#, fuzzy
 msgid "&Default key"
-msgstr "Voreinstellungen"
+msgstr "&Standardtaste"
 
 #: kkeydialog.cpp:394
 msgid "&Custom key"
-msgstr ""
+msgstr "&Eigene Taste"
 
 #: main.cpp:25
-#, fuzzy
 msgid "Usage: "
-msgstr "Gebrauch: %s\n"
+msgstr "Benutzung: "
 
 #: main.cpp:27
-#, fuzzy
 msgid ""
 " [filename] [siwtches]\n"
 "\n"
-msgstr "[Dateiname]\n"
+msgstr ""
+" [Dateiname] [Schalter]\n"
+"\n"
 
 #: main.cpp:28
-#, fuzzy
 msgid ""
 "See KDE and Qt documentation for\n"
 "command line options.\n"
 msgstr ""
-"Bitte schlagen Sie die Kommandoparameter in der Qt-Dokumentation nach.\n"
+"Bitte schlagen Sie die Kommandoparameter in der\n"
+"KDE- und Qt-Dokumentation nach.\n"
 
 #: main.cpp:30
 msgid "Error on command line"
-msgstr ""
+msgstr "Fehler in Befehlszeile"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -698,74 +680,67 @@ msgstr "Ghostscript-Meldungen"
 
 #: messages.cpp:56
 msgid "&Clear"
-msgstr ""
+msgstr "&Leeren"
 
 #: messages.cpp:59 viewcontrol.cpp:114
 msgid "&Dismiss"
-msgstr ""
+msgstr "&Schließen"
 
 #: print.cpp:35
-#, fuzzy
 msgid "Printer setup"
-msgstr "Druckername"
+msgstr "Druckereinstellung"
 
 #: print.cpp:65
-#, fuzzy
 msgid "&Printer name"
-msgstr "Druckername"
+msgstr "&Druckername"
 
 #: print.cpp:77
 msgid "&Spooler command"
-msgstr ""
+msgstr "&Spool-Befehl"
 
 #: print.cpp:89
 msgid "&Environment variable"
-msgstr ""
+msgstr "&Umgebungsvariable"
 
 #: print.cpp:148
-#, fuzzy
 msgid "Print to file"
-msgstr "Druckerfehler : lpr"
+msgstr "In Datei drucken"
 
 #: print.cpp:153
 msgid "Pages"
 msgstr "Seiten"
 
 #: print.cpp:179
-#, fuzzy
 msgid "&All"
-msgstr "Alle"
+msgstr "&Alle"
 
 #: print.cpp:188
 msgid "&Current"
-msgstr ""
+msgstr "A&ktuelle"
 
 #: print.cpp:196
-#, fuzzy
 msgid "&Marked"
-msgstr "Markierte"
+msgstr "&Markierte"
 
 #: print.cpp:205
 msgid "&Range"
-msgstr ""
+msgstr "&Bereich"
 
 #: print.cpp:219
 msgid "to"
-msgstr ""
+msgstr "bis"
 
 #: print.cpp:232
-#, fuzzy
 msgid "Print document in re&verse order"
-msgstr "Dokument drucken"
+msgstr "Dokument in umgekehrter Reihenfolge drucken"
 
 #: print.cpp:249
-#, fuzzy
 msgid "&Setup ..."
-msgstr "&Öffnen ..."
+msgstr "&Einstellungen..."
 
 #: print.cpp:289
 msgid "Range error"
-msgstr ""
+msgstr "Bereichsfehler"
 
 #: print.cpp:290
 msgid ""
@@ -776,81 +751,29 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
+"Der eingegebene Druckbereich\n"
+"wurde nicht verstanden.\n"
+"\n"
+"Der angegebene Bereich muß im Seitenbereich\n"
+"für diesen Teil des Dokuments liegen.\n"
+"Überprüfen Sie die Statusleiste nach dieser Information.\n"
 
 #: viewcontrol.cpp:36
-#, fuzzy
 msgid "Force changes to ..."
-msgstr "Erzwinge Änderungen an "
+msgstr "Erzwinge Änderungen an... "
 
 #: viewcontrol.cpp:78
-#, fuzzy
 msgid "&magnification"
-msgstr "Vergrößerung"
+msgstr "&Vergrößerung"
 
 #: viewcontrol.cpp:86
-#, fuzzy
 msgid "m&edia"
-msgstr "Medium"
+msgstr "&Medium"
 
 #: viewcontrol.cpp:94
-#, fuzzy
 msgid "&orientation"
-msgstr "Ausrichtung"
+msgstr "&Ausrichtung"
 
 #: viewcontrol.cpp:111
 msgid "&Apply"
-msgstr ""
-
-#~ msgid "&1."
-#~ msgstr "&1."
-
-#~ msgid "&2."
-#~ msgstr "&2."
-
-#~ msgid "&3."
-#~ msgstr "&3."
-
-#~ msgid "&4."
-#~ msgstr "&4."
-
-#~ msgid "&Shrink wrap"
-#~ msgstr "ganze &Seite"
-
-#~ msgid "&1. "
-#~ msgstr "&1."
-
-#~ msgid "&2. "
-#~ msgstr "&2."
-
-#~ msgid "&3. "
-#~ msgstr "&3."
-
-#~ msgid "&4. "
-#~ msgstr "&4."
-
-#~ msgid "Title :"
-#~ msgstr "Titel :"
-
-#~ msgid "Date :"
-#~ msgstr "Datum :"
-
-#~ msgid "Mark this page"
-#~ msgstr "Diese Seite markieren"
-
-#~ msgid "Printer Name : "
-#~ msgstr "Druckername :"
-
-#~ msgid "No pages have been marked for printing."
-#~ msgstr "Keine Seiten zum Drucken markiert."
-
-#~ msgid ""
-#~ "The file\n"
-#~ "\"%s\"\n"
-#~ "could not be found."
-#~ msgstr ""
-#~ "Die Datei\n"
-#~ "\"%s\"\n"
-#~ "kann nicht gefunden werden."
-
-#~ msgid "Didn't recognise file\n"
-#~ msgstr "Dateiformat konnte nicht erkannt werden\n"
+msgstr "&Übernehmen"
