--- a/po/zh_CN.GB2312/kghostview.po
+++ b/po/zh_CN.GB2312/kghostview.po
@@ -6,242 +6,755 @@ msgstr ""
 "Last-Translator: Wang Jian <lark@ipc.ustc.edu.cn>\n"
 "Language-Team: zh_CN ( gb2312 )\n"
 
-msgid "&About this application"
-msgstr "有关这个应用程序[&A]"
-
-msgid "&Copyright"
-msgstr "版权[&C]"
-
-msgid "&Go"
-msgstr "跳至[&G]"
-
-msgid "&Go to page ..."
-msgstr "跳至页...[&G]"
-
-msgid "&Grayscale"
-msgstr "灰度[&G]"
-
-msgid "&Help for this application"
-msgstr "这个应用程序的帮助[&H]"
-
-msgid "&Info ..."
-msgstr "信息[&I] ..."
-
-msgid "&Next page"
-msgstr "下一页[&N]"
-
-msgid "&Open ..."
-msgstr "打开[&O] ..."
-
-msgid "&Pagemarks"
-msgstr "页标记[&P]"
-
-msgid "&Previous Page"
-msgstr "前一页[&P]"
-
-msgid "&Print ..."
-msgstr "打印[&P] ..."
-
-msgid "&Read down"
-msgstr "往下读[&R]"
-
-msgid "&Redisplay"
-msgstr "重绘[&R]"
-
-msgid "&Remove page marks"
-msgstr "去除页标记[&R]"
-
-msgid "&Save options"
-msgstr "保存选项[&S]"
-
-msgid "&Toggle page marks"
-msgstr "切换页标记[&T]"
-
-msgid "&View control ..."
-msgstr "视图控制[&V] ..."
-
-msgid "About kghostview"
-msgstr "关于 kghostview"
-
-msgid "Change view ..."
-msgstr "改变视图 ..."
-
-msgid "Configure &interpreter ..."
-msgstr "配置解释器[&I] ..."
-
-msgid "Configure &key bindings ..."
-msgstr "配置按键关联[&K] ..."
-
-msgid "Configure interpreter"
-msgstr "配置解释器"
-
+#: copyright.cpp:27
 msgid "Copyright"
 msgstr "版权宣告"
 
-msgid "Could not start or find KFM."
-msgstr "无法运行或找不到 KFM."
+#: copyright.cpp:41
+msgid ""
+"\n"
+"This program is free software; you can redistribute it and/or modify\n"
+"it under the terms of the GNU General Public License as published by\n"
+"the Free Software Foundation; either version 2 of the License, or\n"
+"(at your option) any later version.\n"
+"\n"
+"This program is distributed in the hope that it will be useful,\n"
+"but WITHOUT ANY WARRANTY; without even the implied warranty of\n"
+"MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n"
+"GNU General Public License for more details.\n"
+"\n"
+"You should have received a copy of the GNU General Public License\n"
+"along with this program; if not, write to the Free Software\n"
+"Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
+msgstr ""
 
+#: goto.cpp:54
+#, fuzzy
+msgid "&Section"
+msgstr "保存选项[&S]"
+
+#: goto.cpp:70
+#, fuzzy
+msgid "&Page"
+msgstr "页"
+
+#: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2215
+#: kghostview.cpp:2227 kghostview.cpp:2232 kghostview.cpp:2515
+#, c-format
+msgid "of %d"
+msgstr ""
+
+#: info.cpp:45
+msgid "File name :"
+msgstr ""
+
+#: info.cpp:53
+msgid "Document title :"
+msgstr ""
+
+#: info.cpp:61
+msgid "Publication date :"
+msgstr ""
+
+#: interpreter.cpp:42
 msgid "General"
 msgstr "一般"
 
-msgid "Ghostscript messages"
-msgstr "Ghostscipt 消息"
+#: interpreter.cpp:79
+msgid "&Interpreter name"
+msgstr ""
 
-msgid "Go To Page"
-msgstr "跳至页数"
+#: interpreter.cpp:87
+#, fuzzy
+msgid "&Antialiasing"
+msgstr "打开平滑功能"
 
-msgid "Go back"
-msgstr "往后"
+#: interpreter.cpp:97
+msgid "Platform &fonts"
+msgstr ""
 
-msgid "Go forward"
-msgstr "往前"
+#: interpreter.cpp:107
+msgid "&Messages"
+msgstr ""
 
-msgid "Go to &end"
-msgstr "跳至最后[&E]"
-
-msgid "Go to &start"
-msgstr "跳至开头[&S]"
-
-msgid "Go to ..."
-msgstr "跳至 ..."
-
-msgid "Go to end"
-msgstr "跳至最后"
-
-msgid "Go to page ..."
-msgstr "跳至...页"
-
-msgid "Go to start"
-msgstr "跳至开头"
-
-msgid "Hide Ghostscript messages"
-msgstr "隐藏 Ghostscript 讯息"
-
-msgid "Home"
-msgstr "回到起点"
-
-msgid "Malformed URL."
-msgstr "不正确的 URL"
-
-msgid "Mark &all pages"
-msgstr "标记全部页[&A]"
-
-msgid "Mark &current page"
-msgstr "标记当前页[&C]"
-
-msgid "Mark &even pages"
-msgstr "标记偶数页[&E]"
-
-msgid "Mark &odd pages"
-msgstr "标记奇数页[&O]"
-
-msgid "Mark all pages"
-msgstr "标记全部页"
-
-msgid "Mark current page"
-msgstr "标记当前页"
-
-msgid "Mark even pages"
-msgstr "标记偶数页"
-
-msgid "Mark odd pages"
-msgstr "标记奇数页"
-
-msgid "Next Page"
-msgstr "下一页"
-
-msgid "P.%d "
-msgstr "页数.%d "
-
-msgid "P.1 "
-msgstr "页数.1 "
-
-msgid "Pages"
-msgstr "页"
-
+#: interpreter.cpp:130
 msgid "Palette"
 msgstr "调色板"
 
-msgid "Prev Page"
-msgstr "前一页"
+#: interpreter.cpp:152
+msgid "Colo&r"
+msgstr ""
 
+#: interpreter.cpp:161
+msgid "&Grayscale"
+msgstr "灰度[&G]"
+
+#: interpreter.cpp:169
+msgid "Monochrom&e"
+msgstr ""
+
+#: interpreter.cpp:192
+msgid "Backing"
+msgstr ""
+
+#: interpreter.cpp:214
+msgid "&Pixmap"
+msgstr ""
+
+#: interpreter.cpp:224
+msgid "&Backing store"
+msgstr ""
+
+#: interpreter.cpp:244 kkeydialog.cpp:230
+msgid "&Defaults"
+msgstr ""
+
+#: interpreter.cpp:314
+msgid "gs"
+msgstr "gs"
+
+#: kaccel.cpp:166
+msgid "CTRL+O"
+msgstr ""
+
+#: kaccel.cpp:170
+msgid "CTRL+N"
+msgstr ""
+
+#: kaccel.cpp:174
+msgid "CTRL+W"
+msgstr ""
+
+#: kaccel.cpp:178
+msgid "CTRL+S"
+msgstr ""
+
+#: kaccel.cpp:181 kaccel.cpp:401 kghostview.cpp:347 kghostview.cpp:368
+#: kghostview.cpp:432 kghostview.cpp:1286
 msgid "Print"
 msgstr "打印"
 
-msgid "Read down the page"
-msgstr "此页往下读"
+#: kaccel.cpp:182
+msgid "CTRL+P"
+msgstr ""
 
-msgid "Redisplay"
-msgstr "重绘"
+#: kaccel.cpp:186
+msgid "CTRL+Q"
+msgstr ""
 
-msgid "Remove page marks"
-msgstr "去除页标记"
+#: kaccel.cpp:190
+msgid "CTRL+X"
+msgstr ""
 
-msgid "Sc.%d "
-msgstr "章节.%d "
+#: kaccel.cpp:194
+msgid "CTRL+C"
+msgstr ""
 
-msgid "Sc.1 "
-msgstr "章节.1 "
+#: kaccel.cpp:198
+msgid "CTRL+V"
+msgstr ""
 
-msgid "Sc.100 of 100  P.100 of 100"
-msgstr "章节: 100 of 100  页数:100 of 100"
+#: kaccel.cpp:202
+msgid "CTRL+Z"
+msgstr ""
 
-msgid "Scroll Down"
-msgstr "往下卷动"
+#: kaccel.cpp:206
+msgid "CTRL+F"
+msgstr ""
 
-msgid "Scroll Left"
-msgstr "往左卷动"
+#: kaccel.cpp:210
+msgid "CTRL+R"
+msgstr ""
 
-msgid "Scroll Right"
-msgstr "往右卷动"
+#: kaccel.cpp:213 kaccel.cpp:425
+msgid "Insert"
+msgstr ""
 
-msgid "Scroll Up"
-msgstr "往上卷动"
+#: kaccel.cpp:214
+msgid "CTRL+Insert"
+msgstr ""
 
-msgid "Show &page list"
-msgstr "显示页列表[&P]"
+#: kaccel.cpp:217 kaccel.cpp:428
+msgid "Home"
+msgstr "回到起点"
 
-msgid "Show &tool bar"
-msgstr "显示工具条[&T]"
+#: kaccel.cpp:218
+#, fuzzy
+msgid "CTRL+Home"
+msgstr "回到起点"
 
-msgid "Show Ghostscript messages"
-msgstr "显示 Ghostscript 消息"
+#: kaccel.cpp:221 kaccel.cpp:431
+msgid "End"
+msgstr ""
 
-msgid "Show st&atus bar"
-msgstr "显示状态行[&A]"
+#: kaccel.cpp:222
+msgid "CTRL+End"
+msgstr ""
 
-msgid "Sorry, not ready yet"
-msgstr "抱歉, 尚未准备好"
+#: kaccel.cpp:225 kaccel.cpp:226 kaccel.cpp:434
+msgid "Prior"
+msgstr ""
 
-msgid "Toggle page marks"
-msgstr "切换页标记"
+#: kaccel.cpp:229 kaccel.cpp:230 kaccel.cpp:437
+#, fuzzy
+msgid "Next"
+msgstr "下一页"
 
-msgid "Turn antialiasing off"
-msgstr "关闭平滑功能"
+#: kaccel.cpp:234
+msgid "F1"
+msgstr ""
 
-msgid "Turn antialiasing on"
-msgstr "打开平滑功能"
+#: kghostview.cpp:202
+msgid "Document information"
+msgstr ""
 
-msgid "Usage: "
-msgstr "用法: "
-
-msgid "Version 0.6"
-msgstr "版本: 0.6"
-
+#: kghostview.cpp:216 kghostview.cpp:349 kghostview.cpp:370 kghostview.cpp:439
 msgid "View Control"
 msgstr "视图控制"
 
-msgid "Zoom &in"
-msgstr "放大[&I]"
+#: kghostview.cpp:350 kghostview.cpp:371 kghostview.cpp:444
+msgid "Go To Page"
+msgstr "跳至页数"
 
-msgid "Zoom &out"
-msgstr "缩小[&O]"
-
+#: kghostview.cpp:351 kghostview.cpp:372 kghostview.cpp:437
 msgid "Zoom In"
 msgstr "放大"
 
+#: kghostview.cpp:352 kghostview.cpp:373 kghostview.cpp:438
 msgid "Zoom Out"
 msgstr "缩小"
 
-msgid "gs"
-msgstr "gs"
+#: kghostview.cpp:353 kghostview.cpp:374 kghostview.cpp:442
+msgid "Next Page"
+msgstr "下一页"
+
+#: kghostview.cpp:354 kghostview.cpp:375 kghostview.cpp:443
+msgid "Prev Page"
+msgstr "前一页"
+
+#: kghostview.cpp:355 kghostview.cpp:376
+msgid "Scroll Up"
+msgstr "往上卷动"
+
+#: kghostview.cpp:356 kghostview.cpp:377
+msgid "Scroll Down"
+msgstr "往下卷动"
+
+#: kghostview.cpp:357 kghostview.cpp:378
+msgid "Scroll Left"
+msgstr "往左卷动"
+
+#: kghostview.cpp:358 kghostview.cpp:379
+msgid "Scroll Right"
+msgstr "往右卷动"
+
+#: kghostview.cpp:359 kghostview.cpp:380 kghostview.cpp:440
+msgid "Redisplay"
+msgstr "重绘"
+
+#: kghostview.cpp:402 kghostview.cpp:404
+msgid "Not known"
+msgstr ""
+
+#: kghostview.cpp:415
+msgid "Configure interpreter"
+msgstr "配置解释器"
+
+#: kghostview.cpp:490
+msgid "&Open ..."
+msgstr "打开[&O] ..."
+
+#: kghostview.cpp:491
+msgid "Open &recent"
+msgstr ""
+
+#: kghostview.cpp:496
+msgid "&Print ..."
+msgstr "打印[&P] ..."
+
+#: kghostview.cpp:504
+msgid "Zoom &in"
+msgstr "放大[&I]"
+
+#: kghostview.cpp:506
+msgid "Zoom &out"
+msgstr "缩小[&O]"
+
+#: kghostview.cpp:508
+msgid "&View control ..."
+msgstr "视图控制[&V] ..."
+
+#: kghostview.cpp:511
+#, fuzzy
+msgid "&Fit to page width"
+msgstr "跳至页...[&G]"
+
+#: kghostview.cpp:513
+msgid "&Redisplay"
+msgstr "重绘[&R]"
+
+#: kghostview.cpp:515
+msgid "&Info ..."
+msgstr "信息[&I] ..."
+
+#: kghostview.cpp:520
+msgid "&Previous Page"
+msgstr "前一页[&P]"
+
+#: kghostview.cpp:522
+msgid "&Next page"
+msgstr "下一页[&N]"
+
+#: kghostview.cpp:524
+msgid "&Go to page ..."
+msgstr "跳至页...[&G]"
+
+#: kghostview.cpp:527
+msgid "Go to &start"
+msgstr "跳至开头[&S]"
+
+#: kghostview.cpp:529
+msgid "Go to &end"
+msgstr "跳至最后[&E]"
+
+#: kghostview.cpp:531
+msgid "&Read down"
+msgstr "往下读[&R]"
+
+#: kghostview.cpp:536
+msgid "Mark &current page"
+msgstr "标记当前页[&C]"
+
+#: kghostview.cpp:539
+msgid "Mark &all pages"
+msgstr "标记全部页[&A]"
+
+#: kghostview.cpp:541
+msgid "Mark &even pages"
+msgstr "标记偶数页[&E]"
+
+#: kghostview.cpp:543
+msgid "Mark &odd pages"
+msgstr "标记奇数页[&O]"
+
+#: kghostview.cpp:546
+msgid "&Toggle page marks"
+msgstr "切换页标记[&T]"
+
+#: kghostview.cpp:549
+msgid "&Remove page marks"
+msgstr "去除页标记[&R]"
+
+#: kghostview.cpp:560
+msgid "Show &tool bar"
+msgstr "显示工具条[&T]"
+
+#: kghostview.cpp:561
+msgid "Show st&atus bar"
+msgstr "显示状态行[&A]"
+
+#: kghostview.cpp:562
+msgid "Show &page list"
+msgstr "显示页列表[&P]"
+
+#: kghostview.cpp:564
+msgid "Configure &interpreter ..."
+msgstr "配置解释器[&I] ..."
+
+#: kghostview.cpp:565
+msgid "Configure &key bindings ..."
+msgstr "配置按键关联[&K] ..."
+
+#: kghostview.cpp:567
+msgid "&Save options"
+msgstr "保存选项[&S]"
+
+#: kghostview.cpp:574
+msgid "&About this application"
+msgstr "有关这个应用程序[&A]"
+
+#: kghostview.cpp:576
+msgid "&Help for this application"
+msgstr "这个应用程序的帮助[&H]"
+
+#: kghostview.cpp:578
+msgid "&Copyright"
+msgstr "版权[&C]"
+
+#: kghostview.cpp:585
+msgid "&Go"
+msgstr "跳至[&G]"
+
+#: kghostview.cpp:586
+msgid "&Pagemarks"
+msgstr "页标记[&P]"
+
+#: kghostview.cpp:654
+msgid "New window ..."
+msgstr ""
+
+#: kghostview.cpp:657
+#, fuzzy
+msgid "Open file ..."
+msgstr "打开[&O] ..."
+
+#: kghostview.cpp:662
+#, fuzzy
+msgid "Print document ..."
+msgstr "打印[&P] ..."
+
+#: kghostview.cpp:667
+#, fuzzy
+msgid "Zoom in"
+msgstr "放大[&I]"
+
+#: kghostview.cpp:670
+#, fuzzy
+msgid "Zoom out"
+msgstr "缩小[&O]"
+
+#: kghostview.cpp:673
+msgid "Change view ..."
+msgstr "改变视图 ..."
+
+#: kghostview.cpp:683
+msgid "Go back"
+msgstr "往后"
+
+#: kghostview.cpp:686
+msgid "Go forward"
+msgstr "往前"
+
+#: kghostview.cpp:689
+msgid "Go to page ..."
+msgstr "跳至...页"
+
+#: kghostview.cpp:694
+msgid "Go to start"
+msgstr "跳至开头"
+
+#: kghostview.cpp:697
+msgid "Go to end"
+msgstr "跳至最后"
+
+#: kghostview.cpp:700
+msgid "Read down the page"
+msgstr "此页往下读"
+
+#: kghostview.cpp:705
+#, fuzzy
+msgid "Toggle this page mark"
+msgstr "切换页标记"
+
+#: kghostview.cpp:727
+msgid "Sc.100 of 100  P.100 of 100"
+msgstr "章节: 100 of 100  页数:100 of 100"
+
+#: kghostview.cpp:728
+#, c-format
+msgid "100 %"
+msgstr ""
+
+#: kghostview.cpp:729
+msgid "Upside Down"
+msgstr ""
+
+#: kghostview.cpp:754
+msgid "Malformed URL."
+msgstr "不正确的 URL"
+
+#: kghostview.cpp:766
+msgid ""
+"Already waiting\n"
+"for an internet job to finish.\n"
+"Please wait until has finished.\n"
+"Alternatively stop the running one."
+msgstr ""
+
+#: kghostview.cpp:775
+msgid "Could not start or find KFM."
+msgstr "无法运行或找不到 KFM."
+
+#: kghostview.cpp:1220 kghostview.cpp:2307 viewcontrol.cpp:67
+#, fuzzy
+msgid "Portrait"
+msgstr "打印"
+
+#: kghostview.cpp:1222 kghostview.cpp:2313 viewcontrol.cpp:68
+msgid "Landscape"
+msgstr ""
+
+#: kghostview.cpp:1224 kghostview.cpp:2311 viewcontrol.cpp:69
+msgid "Seascape"
+msgstr ""
+
+#: kghostview.cpp:1226 kghostview.cpp:2309 viewcontrol.cpp:70
+msgid "Upside down"
+msgstr ""
+
+#: kghostview.cpp:1264
+msgid "Go to ..."
+msgstr "跳至 ..."
+
+#: kghostview.cpp:1418
+msgid "Turn antialiasing on"
+msgstr "打开平滑功能"
+
+#: kghostview.cpp:1420
+msgid "Turn antialiasing off"
+msgstr "关闭平滑功能"
+
+#: kghostview.cpp:1431
+msgid "Show Ghostscript messages"
+msgstr "显示 Ghostscript 消息"
+
+#: kghostview.cpp:1433
+msgid "Hide Ghostscript messages"
+msgstr "隐藏 Ghostscript 讯息"
+
+#: kghostview.cpp:1498
+msgid "Version 0.6"
+msgstr "版本: 0.6"
+
+#: kghostview.cpp:1499
+msgid "Sorry, not ready yet"
+msgstr "抱歉, 尚未准备好"
+
+#: kghostview.cpp:1506
+msgid "About kghostview"
+msgstr "关于 kghostview"
+
+#: kghostview.cpp:1507
+msgid ""
+"Version :\t0.6 alpha\n"
+"Author : Mark Donohoe\n"
+"Mail : donohoe@kde.org"
+msgstr ""
+
+#: kghostview.cpp:1559 kghostview.cpp:1675
+msgid "Error printing"
+msgstr ""
+
+#: kghostview.cpp:1569
+msgid ""
+"You chose to print all pages to a file.\n"
+"This would produce a document identical to\n"
+"that currently loaded into the viewer.\n"
+"There is no need to print all pages into a new file."
+msgstr ""
+
+#: kghostview.cpp:1582
+msgid ""
+"No file name was given so\n"
+"nothing could be printed to a file.\n"
+msgstr ""
+
+#: kghostview.cpp:1640
+#, c-format
+msgid "Print failure : %s"
+msgstr ""
+
+#: kghostview.cpp:1676
+msgid ""
+"Printing failed because the list of\n"
+"pages to be printed was empty.\n"
+msgstr ""
+
+#: kghostview.cpp:2209 kghostview.cpp:2221 kghostview.cpp:2486
+#: kghostview.cpp:2509
+msgid "of 1    "
+msgstr ""
+
+#: kghostview.cpp:2211 kghostview.cpp:2223 kghostview.cpp:2511
+#, c-format
+msgid "of %d    "
+msgstr ""
+
+#: kghostview.cpp:2213 kghostview.cpp:2225 kghostview.cpp:2513
+#: kghostview.cpp:2520
+#, c-format
+msgid "of %d  "
+msgstr ""
+
+#: kghostview.cpp:2485
+msgid "Sc.1 "
+msgstr "章节.1 "
+
+#: kghostview.cpp:2488
+msgid "P.1 "
+msgstr "页数.1 "
+
+#: kghostview.cpp:2490 kghostview.cpp:2503
+#, c-format
+msgid "P.%d "
+msgstr "页数.%d "
+
+#: kghostview.cpp:2505
+#, c-format
+msgid "Sc.%d "
+msgstr "章节.%d "
+
+#: kkeydialog.cpp:308
+msgid "Current key"
+msgstr ""
+
+#: kkeydialog.cpp:319
+msgid "&Action"
+msgstr ""
+
+#: kkeydialog.cpp:378
+msgid "&No key"
+msgstr ""
+
+#: kkeydialog.cpp:386
+msgid "&Default key"
+msgstr ""
+
+#: kkeydialog.cpp:394
+msgid "&Custom key"
+msgstr ""
+
+#: main.cpp:25
+msgid "Usage: "
+msgstr "用法: "
+
+#: main.cpp:27
+msgid ""
+" [filename] [siwtches]\n"
+"\n"
+msgstr ""
+
+#: main.cpp:28
+msgid ""
+"See KDE and Qt documentation for\n"
+"command line options.\n"
+msgstr ""
+
+#: main.cpp:30
+msgid "Error on command line"
+msgstr ""
+
+#: marklist.cpp:38
+msgid "Mark current page"
+msgstr "标记当前页"
+
+#: marklist.cpp:39
+msgid "Mark all pages"
+msgstr "标记全部页"
+
+#: marklist.cpp:40
+msgid "Mark even pages"
+msgstr "标记偶数页"
+
+#: marklist.cpp:41
+msgid "Mark odd pages"
+msgstr "标记奇数页"
+
+#: marklist.cpp:42
+msgid "Toggle page marks"
+msgstr "切换页标记"
+
+#: marklist.cpp:43
+msgid "Remove page marks"
+msgstr "去除页标记"
+
+#: messages.cpp:29
+msgid "Ghostscript messages"
+msgstr "Ghostscipt 消息"
+
+#: messages.cpp:56
+msgid "&Clear"
+msgstr ""
+
+#: messages.cpp:59 viewcontrol.cpp:114
+msgid "&Dismiss"
+msgstr ""
+
+#: print.cpp:35
+msgid "Printer setup"
+msgstr ""
+
+#: print.cpp:65
+#, fuzzy
+msgid "&Printer name"
+msgstr "打印[&P] ..."
+
+#: print.cpp:77
+msgid "&Spooler command"
+msgstr ""
+
+#: print.cpp:89
+msgid "&Environment variable"
+msgstr ""
+
+#: print.cpp:148
+msgid "Print to file"
+msgstr ""
+
+#: print.cpp:153
+msgid "Pages"
+msgstr "页"
+
+#: print.cpp:179
+msgid "&All"
+msgstr ""
+
+#: print.cpp:188
+msgid "&Current"
+msgstr ""
+
+#: print.cpp:196
+msgid "&Marked"
+msgstr ""
+
+#: print.cpp:205
+msgid "&Range"
+msgstr ""
+
+#: print.cpp:219
+msgid "to"
+msgstr ""
+
+#: print.cpp:232
+msgid "Print document in re&verse order"
+msgstr ""
+
+#: print.cpp:249
+#, fuzzy
+msgid "&Setup ..."
+msgstr "打开[&O] ..."
+
+#: print.cpp:289
+msgid "Range error"
+msgstr ""
+
+#: print.cpp:290
+msgid ""
+"The range of pages entered for printing\n"
+"can't be understood.\n"
+"\n"
+"The range specified must lie within the page\n"
+"range for this part of the document.\n"
+"Check the status bar for this information.\n"
+msgstr ""
+
+#: viewcontrol.cpp:36
+msgid "Force changes to ..."
+msgstr ""
+
+#: viewcontrol.cpp:78
+msgid "&magnification"
+msgstr ""
+
+#: viewcontrol.cpp:86
+#, fuzzy
+msgid "m&edia"
+msgstr "重绘[&R]"
+
+#: viewcontrol.cpp:94
+msgid "&orientation"
+msgstr ""
+
+#: viewcontrol.cpp:111
+msgid "&Apply"
+msgstr ""
